bin/testsuite/tests/compiler/src/errors/compiler21.swg

#global testerror "Err0708";
#global testpass lexer;
/* Γ */ Γ